<resources>
    <string name="app_name">星愿</string>
    <string name="register">注册</string>
    <string name="login">登陆</string>
    <string name="pls_ent_code">请输入密码</string>
    <string name="pls_ent_acc">请输入账号</string>
    <string name="pls_ent_nickname">请输入昵称</string>
    <string name="start_words">即将毕业的你是否还有愿望没有实现？</string>
    <string name="letstart">开始吧</string>
    <string name="enter_my_wishing">填写我的愿望</string>
    <string name="get_bottle">获取一个漂流瓶</string>
    <string name="edit_my_bottle">编辑</string>
    <string name="start_to_chat">开始交谈</string>
    <string name="pls_ent_content">请输入内容</string>
    <string name="edit">编辑</string>
    <string name="isGraduate">是否是毕业生？</string>
    <string name="username">用户名：</string>
    <string name="password">密码：</string>
    <string name="logout">退出登陆</string>
    <string name="change_pass">更改密码</string>
    <string name="islogout">是否退出登陆？</string>
    <string name="confirm">确定</string>
    <string name="disagree">取消</string>
    <string name="copyright">\@2018 星空学生创新中心,lnc</string>
    <string name="about">关于</string>
    <string name="me">我的</string>
    <string name="warming">警告</string>
    <string name="warning_message">更改身份将清楚您之前所发的信息。</string>
    <string name="save">保存</string>
    <string name="add">add</string>
    <string name="send">发送</string>
    <string name="chose_pic">选择图片</string>
    <string name="library">图库</string>
    <string name="camera">相机</string>
    <string name="add_photo">附图</string>
    <string name="none">无</string>
    <string name="private_">私密</string>
    <string name="person">个人</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="check_update">检查更新</string>
    <string name="userinfo">个人资料</string>
    <string name="change_info">个人资料</string>
    <string name="pls_conf_code">请确认密码</string>
    <string name="email">邮箱</string>
    <string name="username_">用户名</string>
    <string name="phone">手机号码</string>
    <string name="nickname">昵称</string>
    <string name="intor">简介</string>
    <string name="change_avatar">更换头像</string>
    <string name="ok">确定</string>
    <string name="cancle">取消</string>
    <string name="need_permission">图文功能需要读取存储权限，请允许后重试。</string>
    <string name="title_activity_wishing">WishingActivity</string>
    <string name="pls_ent_nik">请输入昵称</string>
    <string name="username_filter">0123456789abcdefghijklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="pls_ent_ori_code">请输入原密码</string>
    <string name="pls_ent_new_code">请输入新密码</string>
    <string name="pls_conf_new_code">请确认新密码</string>
    <string name="do_it">帮Ta实现</string>
    <string name="message">留言</string>
    <string name="message_hint">帮助Ta实现愿望，留下你想说的话。</string>
    <string name="come_true">美梦成真</string>
    <string name="noneEx">空空如也</string>
    <string name="like">喜欢</string>
    <string name="need_phone_permission">为了方面我们统计安装的数量，请赋予APP读取设备信息的权限。</string>
    <string name="share">分享</string>
    <string name="duty_text">
        "关于星愿APP免责声明\n"
"在使用本APP前，请您务必仔细阅读并透彻理解本声明。您可以选择不使用本APP，但如果您选择使用，您的使用行为将视为对本声明全部内容的认可。\n"
"1.	本APP转载的文字、图片等资料由本APP用户提供，其真实性、准确性和合法性由信息发布者负责。本APP不提供任何保证，并不承担任何法律责任。\n"
"2.	本APP上所转载的文字、图片等资料，如果侵犯了第三方的知识产权和其他权利，责任归作者或转载者本人承担，本APP概不负责。\n"
"3.	本APP没有提供个人身份信息验证功能，请注意个人信息安全问题，请不要在本APP上透露过多的个人信息，以免造成信息泄露，造成不必要的麻烦。\n"
"4.	在使用本APP的过程可能会涉及到线下活动，因此请不要轻易相信他人，但凡涉及生命威胁，金钱，或者违法的事请等一定要引起注意。\n"
"5.	用户明确并同意使用本APP，网络服务存在的风险及其一切后果将由其本人承担，本APP将不会对此承担任何责任。\n"
"6.	除本APP的服务条款外，其他因不当使用本APP而导致的任何意外、疏忽、合约毁坏、诽谤、知识产权侵犯及其造成的任何损失，本APP概不负责。\n"
"7.	本声明未涉及的问题请参见国家有关法律法规，当本声明与国家有关法律法规冲突时，以国家法律法规为准。\n"
"8.	本APP声明的相关版权及其修改权、更改权和最终解释权均属 华南理工大学广州学院 星空学生创新中心 所有。\n"
    </string>
    <string name="delete">删除</string>
</resources>
