<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chose_pic"
        android:textSize="26sp"
        android:textStyle="bold"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/bt_library"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/library"
        android:background="?android:attr/selectableItemBackground"
        android:textSize="18sp"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/bt_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:background="?android:attr/selectableItemBackground"
        android:textSize="18sp"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/bt_none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/none"
        android:background="?android:attr/selectableItemBackground"
        android:textSize="18sp"/>

</LinearLayout>